# BBGEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  my_mmo.code-workspace
doc/: Todo
example/: CMakeLists.txt
example/cluster/: CMakeLists.txt  client.cc  registery.cc  service.cc
example/nodeserver/: CMakeLists.txt  main.cc
example/nodeserver/config/: LoadConfig.cc  LoadConfig.hpp
example/nodeserver/ecs/: Define.hpp
example/nodeserver/ecs/network/: DBServiceCliComp.hpp  DBServiceConnObj.hpp  DBServiceConnection.cc  DBServiceConnection.hpp  DBserviceCliComp.cc  DBserviceConnObj.cc  EchoConnection.hpp  EchoServer.hpp
example/nodeserver/scene/: NodeScene.cc  NodeScene.hpp
example/nodeserver/session/: DBServiceSession.hpp  DBserviceSession.cc  dbservice.pb.cc  dbservice.pb.h
project/server/gameserver/: CMakeLists.txt  main.cc
project/server/gameserver/init/: LoadConfig.cc  LoadConfig.hpp
project/server/gameserver/network/: Acceptor.cc  Acceptor.hpp  Network.cc  Network.hpp
project/server/gameserver/scene/: GameServerScene.cc  GameServerScene.hpp  Scene.hpp
project/server/gameserver/system/: testsystem.cc  testsystem.hpp
project/server/unit_test/: CMakeLists.txt  Test_Hashmap.cc  Test_Hashmap.hpp  Test_Other.cc  Test_Other.hpp  Test_aabbbox.cc  Test_aabbbox.hpp  Test_aoi.cc  Test_aoi.hpp  Test_lockfree.cc  Test_lockfree.hpp  Test_network.cc  main.cc
project/server/unit_test/engine_test/: Test_ecs_componentmgr.cc  Test_ecs_gameobjmgr.cc  Test_scene.cc
project/server/unit_test/game/aoi/: Test_aoi.cc
project/server/unit_test/lua_test/: cpp2lua.cc
project/server/unit_test/util_test/testhelper/: testhelperdbg.cc
project/server/unit_test/util_test/vector/: PointAndVectorTest.cc
project/src/common/: CMakeLists.txt
project/src/common/engine/ecs/: EcsDefine.hpp
project/src/common/engine/ecs/component/: Component.cc  Component.hpp  ComponentMgr.hpp
project/src/common/engine/ecs/gameobject/: GameObject.cc  GameObject.hpp  GameObjectMgr.hpp
project/src/common/engine/ecs/system/: System.hpp
project/src/common/engine/scene/: Scene.cc  Scene.hpp
project/src/common/util/: Define.hpp
project/src/common/util/assert/: Assert.hpp
project/src/common/util/errcode/: ErrCode.cc  ErrCode.hpp  ErrCodeDef.hpp
project/src/common/util/hashmap/: Hashmap.hpp  HashmapTpl.hpp
project/src/common/util/ini/: IniReader.cc  IniReader.hpp
project/src/common/util/other/: ConstString.hpp  Uuid.cc  Uuid.hpp
project/src/common/util/vector/: CalcOpt.hpp  Vector3.cc
project/src/server/: CMakeLists.txt
project/src/server/config/: gameserver.ini
project/src/server/debug/: CMakeLists.txt  timewheel_test.cc
project/src/server/gameserver/: CMakeLists.txt  main.cc
project/src/server/gameserver/init/: LoadConfig.cc  LoadConfig.hpp
project/src/server/gameserver/scene/: GameServerScene.cc  GameServerScene.hpp
project/src/server/loginserver/: todo
project/src/server/loginserver/confighelp/: LoadConfig.cc  LoadConfig.hpp
project/src/server/loginserver/scene/: LoginServerScene.cc  LoginServerScene.hpp
project/src/server/nodeserver/: CMakeLists.txt  NodeDefine.hpp  main.cc
project/src/server/nodeserver/scene/: NodeScene.cc
project/src/server/share/: CMakeLists.txt
project/src/server/share/ecs/: Define.hpp
project/src/server/share/ecs/aoi/: AoiComponent.cc  AoiComponent.hpp  AoiObjectComponent.hpp  AoiSystem.cc  AoiSystem.hpp
project/src/server/share/ecs/attribute/: AttrDefine.hpp  AttrModule.cc  AttrModule.hpp  Attribute.cc  Attribute.hpp
project/src/server/share/ecs/buff/: BuffBase.hpp  BuffDefine.hpp  BuffList.cc  BuffList.hpp  IBuff.hpp
project/src/server/share/ecs/clock/: ClockComp.cc  ClockSystem.cc  ClockSystem.hpp
project/src/server/share/ecs/cluster/: ClusterDefine.hpp  ClusterNode.cc  ClusterNode.hpp  ClusterNodeComponent.cc  ClusterNodeComponent.hpp  ClusterSystem.hpp
project/src/server/share/ecs/globalluavm/: GlobalLuaVM.cc  GlobalLuaVM.hpp
project/src/server/share/ecs/globalmgr/: GlobalMgr.cc  GlobalMgr.hpp
project/src/server/share/ecs/luascript/: LuaScriptBaseComp.cc  LuaScriptBaseComp.hpp  LuaScriptComponent.cc  LuaScriptComponent.hpp  LuaTestComp.cc  LuaTestComp.hpp
project/src/server/share/ecs/network/: ConnMgr.cc  ConnMgr.hpp  Connection.cc  Connection.hpp  DBServiceCliComp.hpp  DBServiceConnObj.hpp  DBServiceConnection.cc  DBServiceConnection.hpp  DBserviceCliComp.cc  DBserviceConnObj.cc  Network.cc  Network.hpp  NetworkComponent.cc  NetworkComponent.hpp  NetworkSystem.cc  NetworkSystem.hpp
project/src/server/share/ecs/npc/: NpcBase.cc  NpcBase.hpp
project/src/server/share/ecs/player/: PlayerConnection.hpp
project/src/server/share/ecs/testobj/: EmptyComp.hpp
project/src/server/share/scene/: SceneDefine.hpp
project/src/server/share/script/: Test.lua
project/src/server/share/session/: DBServiceSession.hpp  DBserviceSession.cc  SessionBase.hpp
project/src/server/unit_test/: CMakeLists.txt  Test_aabbbox.hpp
project/src/server/unit_test/engine_test/: Test_ecs_component.cc  Test_ecs_componentmgr.cc  Test_scene.cc
project/tools/dbgclient/: CMakeLists.txt  main.cc
project/tools/dbgclient/Scene/: MainScene.cc  MainScene.hpp
project/tools/dbservicerobot/: CMakeLists.txt  main.cc
tools/dbgclient/: CMakeLists.txt
tools/dbgclient/Scene/: MainScene.cc  MainScene.hpp
unit_test/: CMakeLists.txt  Test_Hashmap.hpp  Test_Other.hpp  Test_aabbbox.hpp  Test_lockfree.hpp  main.cc
unit_test/engine/: Test_scene.cc
unit_test/engine_test/: Test_ecs_component.cc  Test_ecs_componentmgr.cc  Test_ecs_gameobjmgr.cc  Test_scene.cc
unit_test/game/aoi/: Test_aoi.cc
unit_test/game/luascript/: Test_lua_comp.cc  Test_lua_global_vm.cc
unit_test/game/timewheel/: Test_timewheel_fatigue_test.cc  Test_timewheel_gameobj.cc
unit_test/lua_test/: cpp2lua.cc
unit_test/plugin/: DbgRpcClient.cc  DbgRpcClient.hpp  DbgRpcServer.cc  DbgRpcServer.hpp  Define.hpp  Test_rpc.cc
unit_test/util_test/testhelper/: testhelperdbg.cc
unit_test/util_test/uuid/: test_uuid.cc
unit_test/util_test/vector/: PointAndVectorTest.cc
(+467 files in other folders)
